test/tab6.l1
tab = mktab();
{ @local x;
  tab[x];
}
